--- a/Practice01(BMI)_1224.ipynb
+++ b/Practice01(BMI)_1224.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvbUQgEzKaPgukEBbFDxVV",
+      "authorship_tag": "ABX9TyMga6/7x+bvpbhFsQCjLtTb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,21 +161,21 @@
         "if bmi > 25:\n",
         "    print(\"過重\")\n",
         "    print(\"少吃多動\")\n",
-        "elif bmi < 18:\n",
-        "    print(\"過輕\")\n",
-        "    print(\"多吃\")\n",
-        "else:\n",
+        "elif bmi > 18:\n",
         "    print(\"正常\")\n",
-        "    print(\"很棒\")"
+        "    print(\"很棒\")\n",
+        "else:\n",
+        "    print(\"過輕\")\n",
+        "    print(\"多吃\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NyQOdh6f5oH6",
-        "outputId": "2ee6145d-7c04-4bf7-a470-dc2c1b85a2f0"
+        "outputId": "31ba6f34-d78c-4c76-b0c2-88f0d2cbfee1"
       },
-      "execution_count": 32,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
