--- a/HW_1224.ipynb
+++ b/HW_1224.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPv4iUkTvoy0b/EjNsjdgn/",
+      "name": "HW_1224.ipynb",
+      "authorship_tag": "ABX9TyN/BdZYum83UO5NqnlwTCOj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -83,6 +84,56 @@
         "else:\n",
         "    print(\"We're EVEN\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 老師上課檢討後的\n",
+        "import random\n",
+        "\n",
+        "my = int(input(\"0-5: \"))\n",
+        "com = random.randint(0, 5)\n",
+        "trans = [\"剪刀(0)\",\"石頭(0)\",\"布(0)\",\n",
+        "      \"剪刀(1)\",\"石頭(1)\",\"布(1)\"]\n",
+        "print(\"我出的:\", trans[my])\n",
+        "print(\"電腦出的:\", trans[com])\n",
+        "\n",
+        "# 第一步:先確定他們是否同組\n",
+        "# 0 // 3: 0\n",
+        "# 1 // 3: 0\n",
+        "# 2 // 3: 0\n",
+        "# 3 // 3: 1\n",
+        "# 4 // 3: 1\n",
+        "# 5 // 3: 1\n",
+        "# 6 // 3: 2\n",
+        "# 取商: 分組 取餘: 循環\n",
+        "mygroup = my // 3\n",
+        "comgroup = com // 3\n",
+        "\n",
+        "# 同組->判斷勝負\n",
+        "if mygroup == comgroup:\n",
+        "    # 情況1: my, com都是0~2 不用動\n",
+        "    # 情況2: my, com都是3~5 -3\n",
+        "    # 合併成同一情況 0 1 2(把這組最低-0)\n",
+        "    # 如果是3~5 回到0~2(餘數)\n",
+        "    my2 = my % 3\n",
+        "    com2 = com % 3\n",
+        "    if my2 == (com2 +1) % 3:\n",
+        "        print(\"I WIN\")\n",
+        "    elif com2 == (my2 + 1) % 3:\n",
+        "        print(\"I　LOSE\")\n",
+        "    else:\n",
+        "        print(\"We're EVEN\")\n",
+        "\n",
+        "# 不同組->平手，因為兩組互不干涉\n",
+        "else:\n",
+        "    print(\"We're EVEN\")"
+      ],
+      "metadata": {
+        "id": "F3RJhM4UMedk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
